--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "2.0.0",
   "description": "Small utility promisification of polling.",
   "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
-    "test": "eslint . && mocha test.js"
+    "test": "eslint . && mocha test.js",
+    "tstest": "tsc && tslint *.ts --type-check --project tsconfig.json"
   },
   "keywords": [
     "promise",
@@ -14,8 +16,11 @@
   "author": "Simon Schick <demwizzy@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "dtslint": "^0.1.2",
     "eslint": "^2.9.0",
-    "mocha": "^2.3.4"
+    "mocha": "^2.3.4",
+    "tslint": "^5.3.2",
+    "typescript": "^2.3.3"
   },
   "engines": {
     "node": ">=4.0.0"
