waitFor.use typing improvements
Better typing of waitFor.use to support extended promises (eg, "OtherPromise").
Demo code on how to reclaim genericity for waitFor.use
Allow waitFor.use with PromiseConstructorLike, as promise-waitfor doesn't use more than that

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "module": "commonjs",
         "lib": [
-            "es6"
+            "es5", "es2015.promise"
         ],
         "noImplicitAny": true,
         "noImplicitThis": true,
